# api/server.go
@@ -1,8 +1,12 @@
 package api
 
 import (
+	"fmt"
+
 	db "github.com/DenysBahachuk/Simple_Bank/db/sqlc"
 	_ "github.com/DenysBahachuk/Simple_Bank/docs"
+	"github.com/DenysBahachuk/Simple_Bank/token"
+	"github.com/DenysBahachuk/Simple_Bank/utils"
 	"github.com/gin-gonic/gin"
 	"github.com/gin-gonic/gin/binding"
 	"github.com/go-playground/validator/v10"
@@ -28,20 +32,40 @@ import (
 // @description
 
 type Server struct {
-	store  db.Store
-	router *gin.Engine
-	logger *zap.SugaredLogger
+	config     utils.Config
+	store      db.Store
+	router     *gin.Engine
+	logger     *zap.SugaredLogger
+	tokenMaker token.Maker
 }
 
-func NewServer(store db.Store, logger *zap.SugaredLogger) *Server {
-	server := Server{store: store, logger: logger}
-	router := gin.Default()
+func NewServer(store db.Store, logger *zap.SugaredLogger, config utils.Config) (*Server, error) {
+	tokenMaker, err := token.NewPasetoMaker(config.TokenSymmetricKey)
+	if err != nil {
+		return nil, fmt.Errorf("cannot create a token maker: %w", err)
+	}
+
+	server := Server{
+		config:     config,
+		store:      store,
+		logger:     logger,
+		tokenMaker: tokenMaker,
+	}
+
+	server.setupRouter()
 
 	if v, ok := binding.Validator.Engine().(*validator.Validate); ok {
 		v.RegisterValidation("currency", validateCurrency)
 	}
 
+	return &server, nil
+}
+
+func (server *Server) setupRouter() {
+	router := gin.Default()
+
 	router.POST("/users", server.createUser)
+	router.POST("/users/login", server.loginUser)
 
 	router.POST("/accounts", server.createAccount)
 	router.GET("/accounts/:id", server.getAccount)
@@ -52,12 +76,10 @@ func NewServer(store db.Store, logger *zap.SugaredLogger) *Server {
 	router.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerfiles.Handler))
 
 	server.router = router
-
-	return &server
 }
 
-func (s *Server) Start(addr string) error {
-	return s.router.Run(addr)
+func (server *Server) Start(addr string) error {
+	return server.router.Run(addr)
 }
 
 func errorResponse(err error) gin.H {
